plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}
group = 'br.com.brisabr'
version = '0.0.1-SNAPSHOT'
java {
	sourceCompatibility = '21'
}
repositories {
	mavenCentral()
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation' // Jakarta Validation
	implementation 'org.springframework.boot:spring-boot-starter-actuator' // Health checks e metricas
	implementation 'com.auth0:java-jwt:4.4.0'
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8' // Rate limiting cache
	
	// Swagger/OpenAPI para documentacao automatica da API
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	
	compileOnly 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}
tasks.named('test') {
	useJUnitPlatform()
}